--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "babel-core": "~5.8.22",
     "babel-loader": "~5.3.2",
     "backbone-model": "~1.0.9",
-    "pegjs-loader": "~0.1.1",
     "baconjs": "~0.7.73",
-    "react": "*",
-    "svg-pan-zoom": "~3.2.3",
-    "svg-intersections": "~0.2.3",
-    "webpack": "~1.11.0",
     "js-clipper": "~1.0.1",
+    "ohm-loader": "0.0.0",
+    "pdfkit": "^0.7.1",
+    "pegjs-loader": "~0.1.1",
+    "react": "*",
     "react-addons-update": "~0.14.1",
-    "react-dom": "~0.14.1"
+    "react-dom": "~0.14.1",
+    "svg-intersections": "~0.2.3",
+    "svg-pan-zoom": "~3.2.3",
+    "webpack": "~1.11.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "/opt/boxen/nodenv/versions/v0.10.21/bin/webpack-dev-server --progress --colors --devtool inline-source-map"
   },
   "repository": {
     "type": "git",
@@ -28,8 +30,5 @@
   "author": "gazs",
   "bugs": {
     "url": "https://github.com/gazs/szerkeszto/issues"
-  },
-	"scripts": {
-		"start": "/opt/boxen/nodenv/versions/v0.10.21/bin/webpack-dev-server --progress --colors --devtool inline-source-map"
-	}
+  }
 }
