--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "react": "*",
     "react-addons-update": "~0.14.1",
     "react-dom": "~0.14.1",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5",
+    "redux-form": "^4.1.2",
     "svg-intersections": "~0.2.3",
     "svg-pan-zoom": "~3.2.3",
     "webpack": "~1.11.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2"
+  },
   "scripts": {
     "start": "/opt/boxen/nodenv/versions/v0.10.21/bin/webpack-dev-server --progress --colors --devtool inline-source-map"
   },
