--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "~5.3.2",
     "backbone-model": "~1.0.9",
     "baconjs": "~0.7.73",
+    "history": "^1.17.0",
     "js-clipper": "~1.0.1",
     "ohm-loader": "0.0.0",
     "pegjs-loader": "~0.1.1",
@@ -15,6 +16,7 @@
     "react-addons-update": "~0.14.1",
     "react-dom": "~0.14.1",
     "react-redux": "^4.0.6",
+    "react-router": "^1.0.3",
     "redux": "^3.0.5",
     "redux-form": "^4.1.2",
     "svg-intersections": "~0.2.3",
